refactor: use dedicated geokrety package and gkId converter
